Fix critical bugs and improve action system reliability
This commit addresses multiple issues reported with the quick actions feature
and enhances the fallback generic action system for better reliability.

## Critical Fixes

### 1. ConfirmationOverlay Not Closing
- **Issue**: Overlay remained visible after clicking Apply, Cancel, or X
- **Root Cause**: Over-complicated code with unnecessary guards
- **Fix**: Reverted to original simple git version
- **Files**: src/actions/ui/ConfirmationOverlay.js

### 2. Actions Not Showing on Page Load
- **Issue**: Quick action buttons missing until tab switch
- **Root Cause**: Content script and registry not initialized before access
- **Fix**: Added retry logic with exponential backoff in background.js
  and plugin.js, ensured await registry.initialize() in content.js
- **Files**:
  - src/background/background.js (retry logic for get_available_actions)
  - src/plugin/plugin.js (retry logic in updateQuickActions)
  - src/content/content.js (await initialization before action access)

### 3. Undefined Error Messages in Chat
- **Issue**: Literal "undefined" appearing in chat for action errors
- **Root Cause**: Property mismatch - looking for result.error but
  content.js sends result.message
- **Fix**: Updated plugin.js to use result.message consistently for both
  success and error cases
- **Files**: src/plugin/plugin.js (lines 633, 655, 759)

### 4. Google Docs Summarize Not Working
- **Issue**: Clicking "Summarize Document" gave undefined error
- **Root Cause**: GoogleDocsProvider.getContext() not extracting documentText
- **Fix**: Used GoogleWorkspaceExtractor to properly extract from
  window.DOCS_modelChunk (canvas-rendered content)
- **Files**: src/actions/providers/googledocs/GoogleDocsProvider.js

### 5. Chat System Not Working
- **Issue**: Chat submissions showed "waiting for response" indefinitely
- **Root Cause**: Removed pageText/pageSummary variables that were never filled
- **Fix**: Redesigned chat to use only conve

--- a/plugin.html
+++ b/plugin.html
@@ -100,6 +100,55 @@
          opacity: 0.5;
          cursor: not-allowed;
          }
+         /* Quick Actions Section */
+         #quick-actions-container {
+         display: grid;
+         grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+         gap: 8px;
+         margin-bottom: 16px;
+         }
+         .quick-action-btn {
+         background-color: #fff7ed;
+         color: #191919;
+         border: 1px solid #e8e4df;
+         border-radius: 8px;
+         padding: 10px 12px;
+         font-size: 13px;
+         font-weight: 500;
+         cursor: pointer;
+         transition: all 0.2s;
+         text-align: left;
+         display: flex;
+         align-items: center;
+         gap: 6px;
+         max-width: 100%;
+         overflow: hidden;
+         text-overflow: ellipsis;
+         white-space: nowrap;
+         }
+         .quick-action-btn:hover {
+         background-color: #f5f1ec;
+         border-color: #d4cfc9;
+         transform: translateY(-1px);
+         box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+         }
+         .quick-action-btn:active {
+         transform: translateY(0);
+         box-shadow: none;
+         }
+         .quick-action-btn:disabled {
+         opacity: 0.5;
+         cursor: not-allowed;
+         }
+         .quick-action-btn .icon {
+         font-size: 16px;
+         flex-shrink: 0;
+         }
+         .quick-action-btn span:last-child {
+         overflow: hidden;
+         text-overflow: ellipsis;
+         white-space: nowrap;
+         }
          /* Summary Section: resizable vertically */
          #summary-container {
          background-color: #ffffff;
@@ -436,25 +485,15 @@
                <button class="btn btn-primary" id="config-save">Save</button>
             </div>
          </div>
+         <!-- Quick Actions -->
+         <div id="quick-actions-section">
+            <h2>Quick Actions</h2>
+            <div id="quick-actions-container"></div>
+         </div>
          <div class="summary-header">
-            <h2>Webpage Summary</h2>
-            <button class="refresh-btn" id="summarize-btn" title="Summarize this page">
-               <span>📝</span>
-               <span>Summarize</span>
-            </button>
+            <h2>Chat</h2>
+            <button class="refresh-btn" id="clear-chat-btn" title="Clear chat history">🗑️ Clear</button>
          </div>
-         <div id="summary-container">
-            <div class="loader" id="summary-loader">
-               <div class="thinking-dots">
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-               </div>
-            </div>
-            <div id="summary"></div>
-         </div>
-         <h2>Chat</h2>
          <div id="chat-box"></div>
          <div class="loader" id="chat-loader">
             <div class="thinking-dots">
